# wingman-mcp

./: .env.example  .gitignore  CLAUDE_CODE_HANDOVER_v0.2.md  Dockerfile  LICENSE  PRIVACY.md  README.md  pyproject.toml  requirements.txt
docs/assets/: README.md
docs/launch/: connect-walkthrough.md  voiceover-script.md  wingman-explainer.html
docs/superpowers/plans/: 2026-06-30-wingman-cloud-foundation.md
docs/superpowers/specs/: 2026-06-30-wingman-cloud-foundation-design.md
examples/: cursor_mcp_config.json  vscode_mcp_config.json
skills/wingman-mcp/: SKILL.md
src/wingman/: __init__.py  __main__.py  config.py  prompts.py  server.py
src/wingman/cloud/: __init__.py  __main__.py  auth.py  config_cloud.py  hardening.py  identity.py  migrate.py  observability.py  server_http.py  store_pg.py
src/wingman/cloud/migrations/: 001_init.sql
src/wingman/storage/: db.py  models.py
src/wingman/tools/: plan_tools.py  task_tools.py  ui_tools.py
src/wingman/ui/: resource.py
src/wingman/ui/static/: app.js  index.html  styles.css
tests/: conftest.py  test_plan_tools.py  test_prompts.py  test_server.py  test_storage.py  test_ui_tools.py
tests/cloud/: conftest.py  test_auth.py  test_auth_middleware.py  test_cascade.py  test_config.py  test_entrypoint.py  test_hardening.py  test_identity.py  test_lifespan.py  test_metrics.py  test_migrate.py  test_observability.py  test_panel.py  test_server_tools.py  test_smoke_http.py  test_store_plans.py  test_store_schema.py  test_store_tasks.py
